fixed the h1 overlapping with the navbar on mobile devices

--- a/style.css
+++ b/style.css
@@ -377,7 +377,7 @@ a:hover {
 
 .fade-enter-active,
 .fade-leave-active {
-  transition: all 0.5s, height 1s, opacity 0.5s;
+  transition: all 1s, height 1s, opacity 0.5s;
   overflow: hidden;
   max-height: 1000px;
 }
@@ -582,6 +582,6 @@ a:hover {
         height: 100%;
     }
     .mainH1 {
-        margin-top: 12.5%;
+        margin-top: 14%;
     }
 }
